grammar.js
    program: ($) => repeat($._top_decl),

    // ── Top-level declarations ──────────────────────────────────────────
    _top_decl: ($) =>
      choice(
        $.type_def_decl,
        $.enum_type_def_decl,
        $.event_decl,
        $.event_set_decl,
        $.interface_decl,
        $.impl_machine_decl,
        $.spec_machine_decl,
        $.fun_decl,
        $.pure_decl,
        $.named_module_decl,
        $.test_decl,
        $.implementation_decl,
        $.global_param_decl,
        // PVerifier top-level declarations
        $.invariant_decl,
        $.invariant_group_decl,
        $.axiom_decl,
        $.assume_on_start_decl,
        $.proof_block_decl,
      ),

    // ── Type definitions ────────────────────────────────────────────────
    type_def_decl: ($) => choice($.foreign_type_def, $.p_type_def),

    p_type_def: ($) =>
      seq("type", field("name", $.identifier), "=", $._type, ";"),

    // ── Enum definitions ────────────────────────────────────────────────
    enum_type_def_decl: ($) =>
      seq(
        "enum",
        field("name", $.identifier),
        "{",
        choice($.enum_elem_list, $.numbered_enum_elem_list),
        "}",
      ),

    enum_elem_list: ($) => sep1($.enum_elem, ","),

    enum_elem: ($) => field("name", $.identifier),

    event_decl: ($) =>
      seq(
        "event",
        field("name", $.identifier),
        optional(seq(":", $._type)),
        ";",
      ),

    // ── Event set declarations ──────────────────────────────────────────
    event_set_literal: ($) => sep1($.non_default_event, ","),

    // ── Interface declarations ──────────────────────────────────────────
    impl_machine_decl: ($) =>
      seq(
        "machine",
        field("name", $.identifier),
        repeat($.receives_sends),
        $.machine_body,
      ),

    spec_machine_decl: ($) =>
      seq(
        "spec",
        field("name", $.identifier),
        "observes",
        $.event_set_literal,
        $.machine_body,
      ),

    machine_body: ($) => seq("{", repeat($._machine_entry), "}"),

    _machine_entry: ($) =>
      choice($.var_decl, $.fun_decl, $.state_decl),

    // ── Variable declarations ───────────────────────────────────────────
    var_decl: ($) => seq("var", $.iden_list, ":", $._type, ";"),

    iden_list: ($) => sep1($.identifier, ","),

    // ── Function declarations ───────────────────────────────────────────
    fun_decl: ($) => choice($.foreign_fun_decl, $.p_fun_decl),

    p_fun_decl: ($) =>
      seq(
        "fun",
        field("name", $.identifier),
        "(",
        optional($.fun_param_list),
        ")",
        optional(seq(":", $._type)),
        $.function_body,
      ),

    fun_param: ($) =>
      seq(field("name", $.identifier), ":", field("type", $._type)),

    // ── Pure function declarations (PVerifier) ──────────────────────────
    state_decl: ($) =>
      seq(
        optional("start"),
        optional(field("temperature", choice("hot", "cold"))),
        "state",
        field("name", $.identifier),
        "{",
        repeat($._state_body_item),
        "}",
      ),

    _state_body_item: ($) =>
      choice(
        $.state_entry,
        $.state_exit,
        $.state_defer,
        $.state_ignore,
        $.on_event_do_action,
        $.on_event_goto_state,
      ),

    state_entry: ($) =>
      seq(
        "entry",
        choice(
          $.anon_event_handler,
          seq(field("fun_name", $.identifier), ";"),
        ),
      ),

    state_ignore: ($) => seq("ignore", $.non_default_event_list, ";"),

    on_event_do_action: ($) =>
      seq(
        "on",
        $.event_list,
        "do",
        choice(
          seq(field("fun_name", $.identifier), ";"),
          $.anon_event_handler,
        ),
      ),

    on_event_goto_state: ($) =>
      seq(
        "on",
        $.event_list,
        "goto",
        $.state_name,
        choice(
          ";",
          seq(
            "with",
            choice(
              $.anon_event_handler,
              seq(field("fun_name", $.identifier), ";"),
            ),
          ),
        ),
      ),

    non_default_event_list: ($) => sep1($.non_default_event, ","),

    non_default_event: ($) => choice("halt", $.identifier),

    event_list: ($) => sep1($.event_id, ","),

    event_id: ($) => choice("null", "halt", $.identifier),

    state_name: ($) => field("state", $.identifier),

    // ── Event handlers ──────────────────────────────────────────────────
    anon_event_handler: ($) =>
      seq(optional(seq("(", $.fun_param, ")")), $.function_body),

    function_body: ($) =>
      seq("{", repeat(choice($.var_decl, $._statement)), "}"),

    // ── Statements ──────────────────────────────────────────────────────
    _statement: ($) =>
      choice(
        $.compound_stmt,
        $.assert_stmt,
        $.assume_stmt,
        $.print_stmt,
        $.return_stmt,
        $.break_stmt,
        $.continue_stmt,
        $.assign_stmt,
        $.insert_stmt,
        $.add_stmt,
        $.remove_stmt,
        $.while_stmt,
        $.foreach_stmt,
        $.if_stmt,
        $.ctor_stmt,
        $.fun_call_stmt,
        $.raise_stmt,
        $.send_stmt,
        $.announce_stmt,
        $.goto_stmt,
        $.receive_stmt,
        $.no_stmt,
      ),

    compound_stmt: ($) => seq("{", repeat($._statement), "}"),

    return_stmt: ($) => seq("return", optional($._expr), ";"),

    assign_stmt: ($) =>
      seq($.lvalue, "=", field("rvalue", $._expr), ";"),

    if_stmt: ($) =>
      prec.right(
        seq(
          "if",
          "(",
          field("condition", $._expr),
          ")",
          field("then", $._statement),
          optional(seq("else", field("else", $._statement))),
        ),
      ),

    send_stmt: ($) =>
      seq(
        "send",
        field("machine", $._expr),
        ",",
        field("event", $._expr),
        optional(seq(",", $.rvalue_list)),
        ";",
      ),

    goto_stmt: ($) =>
      seq(
        "goto",
        $.state_name,
        optional(seq(",", $.rvalue_list)),
        ";",
      ),

    lvalue: ($) =>
      prec.left(
        PREC.ACCESS,
        choice(
          field("name", $.identifier),
          seq($.lvalue, ".", field("field", $.identifier)),
          seq($.lvalue, ".", field("index", $.int_literal)),
          seq($.lvalue, "[", $._expr, "]"),
        ),
      ),

    // ── Expressions ─────────────────────────────────────────────────────
    _expr: ($) =>
      choice(
        $._primitive,
        $.string_literal,
        $.unnamed_tuple_expr,
        $.named_tuple_expr,
        $.paren_expr,
        $.named_tuple_access_expr,
        $.tuple_access_expr,
        $.seq_access_expr,
        $.keyword_expr,
        $.ctor_expr,
        $.fun_call_expr,
        $.unary_expr,
        $.bin_expr,
        $.cast_expr,
        $.choose_expr,
        $.format_expr,
        // PVerifier expressions
        $.quant_expr,
        $.is_expr,
        $.targets_expr,
        $.inflight_expr,
        $.sent_expr,
      ),

    paren_expr: ($) => seq("(", $._expr, ")"),

    named_tuple_access_expr: ($) =>
      prec.left(
        PREC.ACCESS,
        seq($._expr, ".", field("field", $.identifier)),
      ),

    keyword_expr: ($) =>
      choice(
        seq("keys", "(", $._expr, ")"),
        seq("values", "(", $._expr, ")"),
        seq("sizeof", "(", $._expr, ")"),
        seq("default", "(", $._type, ")"),
      ),

    fun_call_expr: ($) =>
      prec(
        PREC.CALL,
        seq(
          field("fun", $.identifier),
          "(",
          optional($.rvalue_list),
          ")",
        ),
      ),

    unary_expr: ($) =>
      prec(PREC.UNARY, seq(choice("-", "!"), $._expr)),

    bin_expr: ($) =>
      choice(
        prec.left(
          PREC.MUL,
          seq($._expr, choice("*", "/", "%"), $._expr),
        ),
        prec.left(
          PREC.ADD,
          seq($._expr, choice("+", "-"), $._expr),
        ),
        prec.left(
          PREC.COMP,
          seq($._expr, choice("<", ">", ">=", "<=", "in"), $._expr),
        ),
        prec.left(PREC.EQ, seq($._expr, choice("==", "!="), $._expr)),
        prec.left(PREC.LAND, seq($._expr, "&&", $._expr)),
        prec.left(PREC.LOR, seq($._expr, "||", $._expr)),
        // PVerifier logical operators
        prec.right(PREC.LTHEN, seq($._expr, "==>", $._expr)),
        prec.left(PREC.LIFF, seq($._expr, "<==>", $._expr)),
      ),

    named_tuple_expr: ($) =>
      seq("(", sep1($.named_tuple_field, ","), optional(","), ")"),

    named_tuple_field: ($) =>
      seq(field("name", $.identifier), "=", field("value", $._expr)),

    rvalue_list: ($) => sep1($._expr, ","),

    // ── Primitives ──────────────────────────────────────────────────────
    nondet: ($) => "$",

    this_keyword: ($) => "this",

    // ── Types ───────────────────────────────────────────────────────────
    _type: ($) =>
      choice(
        $.seq_type,
        $.set_type,
        $.map_type,
        $.tuple_type,
        $.named_tuple_type,
        $.primitive_type,
        $.named_type,
      ),

    map_type: ($) =>
      seq(
        "map",
        "[",
        field("key_type", $._type),
        ",",
        field("value_type", $._type),
        "]",
      ),

    named_tuple_type: ($) => seq("(", $.iden_type_list, ")"),

    iden_type_list: ($) => sep1($.iden_type, ","),

    iden_type: ($) =>
      seq(field("name", $.identifier), ":", field("type", $._type)),

    primitive_type: ($) =>
      choice(
        "bool",
        "int",
        "float",
        "string",
        "event",
        "machine",
        "data",
        "any",
      ),

    named_type: ($) => field("name", $.identifier),

    // ── Module system ───────────────────────────────────────────────────
    named_module_decl: ($) =>
      seq("module", field("name", $.identifier), "=", $._mod_expr, ";"),

    _mod_expr: ($) =>
      choice(
        $.paren_module_expr,
        $.primitive_module_expr,
        $.named_module,
        $.compose_module_expr,
        $.union_module_expr,
        $.hide_events_module_expr,
        $.hide_interfaces_module_expr,
        $.assert_module_expr,
        $.rename_module_expr,
        $.main_machine_module_expr,
      ),

    paren_module_expr: ($) => seq("(", $._mod_expr, ")"),

    primitive_module_expr: ($) =>
      seq("{", sep1($.bind_expr, ","), "}"),

    bind_expr: ($) =>
      seq(
        field("machine_name", $.identifier),
        optional(seq("->", field("interface_name", $.identifier))),
      ),

    named_module: ($) => $.identifier,

    union_module_expr: ($) =>
      prec.left(
        seq("union", $._mod_expr, repeat1(seq(",", $._mod_expr))),
      ),

    assert_module_expr: ($) =>
      seq("assert", $.iden_list, "in", $._mod_expr),

    test_decl: ($) => choice($.safety_test_decl, $.refinement_test_decl),

    safety_test_decl: ($) =>
      seq(
        "test",
        optional($.test_param),
        optional(seq("assume", $._expr)),
        optional($.twise),
        field("name", $.identifier),
        "[",
        "main",
        "=",
        field("main_machine", $.identifier),
        "]",
        ":",
        $._mod_expr,
        ";",
      ),

    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    int_literal: ($) => /[0-9]+/,
